<resources>
    <string name="app_name">Test</string>
    <string name="driveit">driveit</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter_your_name">Enter your full name</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">LOG IN</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="login_success">Login success</string>
    <string name="login_failed">Login failed</string>
    <string name="network_error">Check your connection and try again.</string>
    <string name="unknown_error">Something went wrong. Please try again later.</string>
    <string name="account">Account</string>
    <string name="dismiss">Dismiss</string>
    <string name="name_required">Your name is required</string>
    <string name="password_required">Your password is required</string>
    <string name="reset_password_message">You will receive an OTP to reset your password</string>
    <string name="title_notifications">Notifications</string>
    <string name="aed">AED</string>
    <string name="civic_type">Civic Type R 2019</string>
    <string name="honda">Honda</string>
    <string name="my_garage">My Garage </string>
    <string name="available_cars">Available Cars</string>
    <string name="long_short_term">Long term, Short term</string>
    <string name="more">More</string>
    <string name="top_deals">TOP DEALS</string>
    <string name="sample_amount">2,450</string>
    <string name="weekly">Weekly</string>
    <string name="per_day">Per day</string>
</resources>