<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/car_picture"
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:scaleType="centerInside"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/porsche" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_rectangle"
                android:backgroundTint="@color/grey"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/weekly"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/vehicle_brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/honda"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/car_picture" />

            <TextView
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/sample_amount"
                android:textColor="@color/black"
                android:textSize="@dimen/big_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/vehicle_brand"
                app:layout_constraintTop_toBottomOf="@id/vehicle_brand" />

            <TextView
                android:id="@+id/per_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/per_day"
                android:textSize="@dimen/small_text_size"
                app:layout_constraintStart_toStartOf="@id/vehicle_brand"
                app:layout_constraintTop_toBottomOf="@id/amount" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>